feat(docs): adding new swagger files, fix swagger cinema retrieve list and some README.md improviments
