# docs/swagger.json
@@ -183,7 +183,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.MovieListResult"
+                            "$ref": "#/definitions/responses.HATEOASListResult"
                         }
                     }
                 }
@@ -343,7 +343,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.MovieListResult"
+                            "$ref": "#/definitions/responses.HATEOASListResult"
                         }
                     }
                 }
@@ -378,7 +378,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.MovieListResult"
+                            "$ref": "#/definitions/responses.HATEOASListResult"
                         }
                     }
                 }
@@ -893,23 +893,6 @@
                 "_templates": {}
             }
         },
-        "responses.HATEOASMovieAndPostersList": {
-            "type": "object",
-            "properties": {
-                "movies": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/responses.MovieListItem"
-                    }
-                },
-                "posters": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/responses.Poster"
-                    }
-                }
-            }
-        },
         "responses.HATEOASMovieLinks": {
             "type": "object",
             "properties": {
@@ -923,17 +906,6 @@
                     "$ref": "#/definitions/responses.HATEOASLink"
                 },
                 "upload-movie-poster": {
-                    "$ref": "#/definitions/responses.HATEOASLink"
-                }
-            }
-        },
-        "responses.HATEOASMovieListLinks": {
-            "type": "object",
-            "properties": {
-                "create-movies": {
-                    "$ref": "#/definitions/responses.HATEOASLink"
-                },
-                "self": {
                     "$ref": "#/definitions/responses.HATEOASLink"
                 }
             }
@@ -976,7 +948,7 @@
                     "$ref": "#/definitions/responses.HATEOASMovieLinks"
                 },
                 "_templates": {},
-                "age_rating": {
+                "ageRating": {
                     "type": "integer"
                 },
                 "description": {
@@ -997,47 +969,6 @@
                 "uuid": {
                     "type": "string"
                 }
-            }
-        },
-        "responses.MovieListItem": {
-            "type": "object",
-            "properties": {
-                "_links": {
-                    "$ref": "#/definitions/responses.HATEOASMovieLinks"
-                },
-                "age_rating": {
-                    "type": "integer"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "posterLink": {
-                    "type": "string"
-                },
-                "published": {
-                    "type": "boolean"
-                },
-                "subtitled": {
-                    "type": "boolean"
-                },
-                "uuid": {
-                    "type": "string"
-                }
-            }
-        },
-        "responses.MovieListResult": {
-            "type": "object",
-            "properties": {
-                "_embedded": {
-                    "$ref": "#/definitions/responses.HATEOASMovieAndPostersList"
-                },
-                "_links": {
-                    "$ref": "#/definitions/responses.HATEOASMovieListLinks"
-                },
-                "_templates": {}
             }
         },
         "responses.Poster": {
